feat: 新增canal客户端模块，部分工具类更新