@@ -1,37 +1,76 @@
-package com.syd.common.bean.bo.header;
+package com.syd.common.bean.tree;
 
+import com.alibaba.fastjson2.annotation.JSONField;
 import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import com.syd.common.util.ExtCollectionUtils;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import lombok.Data;
 import lombok.experimental.Accessors;
+import org.springframework.lang.NonNull;
+import org.springframework.lang.Nullable;
 
 import java.util.*;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
  * @author songyide
  * @date 2022/12/8
  */
-@ApiModel("列信息")
+@ApiModel("树形筛选实体")
 @JsonInclude(JsonInclude.Include.NON_EMPTY)
-public record HeaderItem(@ApiModelProperty("字典键") String key,
-                         @ApiModelProperty("标签") String label,
-                         @ApiModelProperty("子列") List<HeaderItem> children) {
-    public static HeaderItem of(String key, String label) {
+public record TreeItem(@ApiModelProperty("结点键") @JSONField(ordinal = 1) String key,
+                       @ApiModelProperty("结点标签") @JSONField(ordinal = 2) String label,
+                       @ApiModelProperty("子结点") @JSONField(ordinal = 3) @JsonPropertyOrder() List<TreeItem> children) {
+    public static TreeItem of(String key, String label) {
         return of(key, label, null);
     }
 
-    public static HeaderItem of(String key, String label, List<HeaderItem> children) {
-        return new HeaderItem(key, label, children);
+    public static TreeItem of(String key, String label, List<TreeItem> children) {
+        return new TreeItem(key, label, children);
+    }
+
+    /**
+     * treeNode关系列表转换生成
+     * <p>调用此方法前无需也不应调用{@link ITreeNode#generateTree(List)}
+     */
+    @NonNull
+    public static <V extends StringTreeNode<V>> List<TreeItem> fromTreeNodeList(@Nullable List<? extends V> list) {
+        return fromTreeNodeList(list, ITreeNode.getDefaultComparator());
+    }
+
+    /**
+     * treeNode关系列表转换生成
+     * <p>调用此方法前无需也不应调用{@link ITreeNode#generateTree(List, Comparator)}
+     *
+     * @param list 列表
+     * @param cmp  比较器，比较器为null时则保持原列表相对顺序
+     */
+    @NonNull
+    public static <V extends StringTreeNode<V>> List<TreeItem> fromTreeNodeList(@Nullable List<? extends V> list,
+                                                                                @Nullable Comparator<? super V> cmp) {
+        if (ExtCollectionUtils.isEmpty(list)) {
+            return Collections.emptyList();
+        }
+        return Objects.requireNonNull(genFromTreeNodeList0(ITreeNode.generateTree(list, cmp)));
+    }
+
+    private static <T extends StringTreeNode<T>> List<TreeItem> genFromTreeNodeList0(List<T> list) {
+        if (ExtCollectionUtils.isEmpty(list)) {
+            return null;
+        }
+        return list.stream()
+                .map(t -> TreeItem.of(t.getId(), t.getName(), genFromTreeNodeList0(t.getChildren())))
+                .collect(Collectors.toList());
     }
 
     /**
      * 表头树转为矩阵
      */
-    public static List<List<HeaderItem>> treeToMatrix(List<HeaderItem> headers) {
+    public static List<List<TreeItem>> treeToMatrix(List<TreeItem> headers) {
         // EasyExcel导出时会补齐表头
         return treeToMatrix(headers, false);
     }
@@ -39,13 +78,13 @@ public record HeaderItem(@ApiModelProperty("字典键") String key,
     /**
      * 表头树转为矩阵
      */
-    public static List<List<HeaderItem>> treeToMatrix(List<HeaderItem> headers, boolean needFill) {
-        List<List<HeaderItem>> mat = new ArrayList<>();
+    public static List<List<TreeItem>> treeToMatrix(List<TreeItem> headers, boolean needFill) {
+        List<List<TreeItem>> mat = new ArrayList<>();
         int height = dfs(mat, headers, new ArrayDeque<>());
         if (needFill) {
             // 按照最大高度填充列
-            for (List<HeaderItem> col : mat) {
-                HeaderItem last = col.get(col.size() - 1);
+            for (List<TreeItem> col : mat) {
+                TreeItem last = col.get(col.size() - 1);
                 while (col.size() < height) {
                     col.add(last);
                 }
@@ -57,16 +96,16 @@ public record HeaderItem(@ApiModelProperty("字典键") String key,
     /**
      * 根据{@link #treeToMatrix(List)}获得的矩阵转为EasyExcel所需表头结构
      */
-    public static List<List<String>> getExcelHeader(List<List<HeaderItem>> matrix) {
+    public static List<List<String>> getExcelHeader(List<List<TreeItem>> matrix) {
         return matrix.stream()
-                .map(col -> col.stream().map(HeaderItem::label).toList())
-                .toList();
+                .map(col -> col.stream().map(TreeItem::label).collect(Collectors.toList()))
+                .collect(Collectors.toList());
     }
 
     /**
      * 根据{@link #treeToMatrix(List)}获得的矩阵转为叶子节点流
      */
-    public static Stream<HeaderItem> getLeavesStream(List<List<HeaderItem>> matrix) {
+    public static Stream<TreeItem> getLeavesStream(List<List<TreeItem>> matrix) {
         return matrix.stream()
                 .map(col -> col.get(col.size() - 1));
     }
@@ -76,7 +115,7 @@ public record HeaderItem(@ApiModelProperty("字典键") String key,
      *
      * @return 树的高度
      */
-    static int dfs(List<List<HeaderItem>> res, List<HeaderItem> list, Deque<HeaderItem> path) {
+    static int dfs(List<List<TreeItem>> res, List<TreeItem> list, Deque<TreeItem> path) {
         if (ExtCollectionUtils.isEmpty(list)) {
             // 遇到叶子节点时将当前路径计入矩阵
             if (!ExtCollectionUtils.isEmpty(path))
@@ -84,7 +123,7 @@ public record HeaderItem(@ApiModelProperty("字典键") String key,
             return 0;
         }
         int h = 0;
-        for (HeaderItem item : list) {
+        for (TreeItem item : list) {
             // 路径入栈
             path.offerLast(item);
             h = Math.max(h, dfs(res, item.children, path));
@@ -122,8 +161,8 @@ public record HeaderItem(@ApiModelProperty("字典键") String key,
         return new Builder().cmp(cmp);
     }
 
-    @Data
     @Accessors(fluent = true, chain = true)
+    @Data
     public static class Builder {
         private Map<String, Builder> children = new TreeMap<>();
         private String originKey;
@@ -140,8 +179,8 @@ public record HeaderItem(@ApiModelProperty("字典键") String key,
             return this;
         }
 
-        public HeaderItem build() {
-            List<HeaderItem> list = null;
+        public TreeItem build() {
+            List<TreeItem> list = null;
             if (!ExtCollectionUtils.isEmpty(this.children)) {
                 // 递归构建表头
                 List<Builder> builderList = new ArrayList<>(this.children.values());
